<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SignupActivity">

    <include
        android:id="@+id/layout_toolbar"
        layout="@layout/layout_toolbar" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/layout_toolbar"
        android:padding="16dp"
        android:scrollbars="vertical">

        <TextView
            android:id="@+id/email_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            style="@style/formLabel"
            android:text="@string/email_label" />

        <TextView
            android:id="@+id/email_warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            style="@style/formWarning" />

        <EditText
            android:id="@+id/email_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/email_label"
            style="@style/editText"
            android:inputType="textEmailAddress"
            android:hint="@string/email_hint" />

        <TextView
            android:id="@+id/phone_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/email_field"
            app:layout_constraintLeft_toLeftOf="parent"
            style="@style/formLabel"
            android:layout_marginTop="16dp"
            android:text="@string/phone_label" />

        <TextView
            android:id="@+id/phone_warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/email_field"
            app:layout_constraintRight_toRightOf="parent"
            style="@style/formWarning"
            android:layout_marginTop="16dp" />

        <EditText
            android:inputType="phone"
            android:id="@+id/phone_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/phone_label"
            style="@style/editText"
            android:hint="@string/phone_hint"/>

        <TextView
            android:id="@+id/login_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/phone_field"
            app:layout_constraintLeft_toLeftOf="parent"
            style="@style/formLabel"
            android:layout_marginTop="16dp"
            android:text="@string/login_label" />

        <TextView
            android:id="@+id/login_warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/email_field"
            app:layout_constraintRight_toRightOf="parent"
            style="@style/formWarning"
            android:layout_marginTop="16dp" />


        <EditText
            android:id="@+id/login_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/login_label"
            style="@style/editText"
            android:hint="@string/login_hint" />

        <TextView
            android:id="@+id/password_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_label"
            app:layout_constraintTop_toBottomOf="@id/login_field"
            style="@style/formLabel"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/password_warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/formWarning"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/login_field"
            app:layout_constraintRight_toRightOf="parent" />

        <EditText
            android:inputType="textPassword"
            android:id="@+id/password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/password_label"
            style="@style/editText"
            android:hint="@string/password_hint" />

        <TextView
            android:id="@+id/password_repeat_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/password_field"
            style="@style/formLabel"
            android:layout_marginTop="16dp"
            android:text="@string/password_repeat_label" />

        <TextView
            android:id="@+id/password_repeat_warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/password_field"
            app:layout_constraintRight_toRightOf="parent"
            style="@style/formWarning"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/password_repeat_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/editText"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@id/password_repeat_label"
            android:hint="@string/password_repeat_hint"/>

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/password_repeat_field"
            app:layout_constraintLeft_toLeftOf="parent"
            style="@style/button"
            android:layout_marginTop="16dp"
            android:text="@string/signup" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/password_repeat_field"
            app:layout_constraintRight_toRightOf="parent"
            style="@style/link"
            android:layout_marginTop="16dp"
            android:text="@string/cancel" />

    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>